Fixed some bugs regarding furigana getting a bit cropped same for images

--- a/UI/Web/src/app/book-reader/_components/book-reader/book-reader.component.scss
+++ b/UI/Web/src/app/book-reader/_components/book-reader/book-reader.component.scss
@@ -213,7 +213,7 @@ $action-bar-height: 38px;
 
         &.writing-style-vertical {
             height: auto;
-            padding: 0;
+            padding: 0 10px 0 0;
             margin: 20px 0;
         }
     }
@@ -223,7 +223,7 @@ $action-bar-height: 38px;
 
         &.writing-style-vertical {
             height: auto;
-            padding: 0;
+            padding: 0 10px 0 0;
             margin: 20px 0;
         }
     }
